--- a/catapult/res/values/strings.xml
+++ b/catapult/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="drawer_title">Drawer</string>
     <string name="general_title">General</string>
     <string name="homescreen_title">Homescreen</string>
+    <string name="dock_search_bar_enabled_title">Dock search bar</string>
 </resources>
