--- a/catapult/res/values/strings.xml
+++ b/catapult/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="general_title">General</string>
     <string name="homescreen_title">Homescreen</string>
     <string name="dock_search_bar_enabled_title">Dock search bar</string>
+    <string name="two_row_dock_title">Two row dock</string>
 </resources>
