--- a/catapult/res/values/strings.xml
+++ b/catapult/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="derived_app_name" translatable="false">Catapult</string>
     <string name="folder_title">Folders</string>
     <string name="dock_title">Dock</string>
@@ -24,5 +24,47 @@
     <string name="missing_notification_access_label">Notification Access Needed</string>
     <string name="missing_notification_access_description">Notification access needed.</string>
     <string name="icon_category">Icons</string>
+
+    <!-- Smartspace -->
+    <string name="smartspace_calendar_gregorian">Gregorian</string>
+    <string name="smartspace_calendar_persian">Persian</string>
+    <string name="smartspace_mode_label">At a Glance Provider</string>
+    <string name="smartspace_mode_lawnchair">Lawnchair</string>
+    <string name="smartspace_mode_google">Google</string>
+    <string name="smartspace_mode_google_search">Google Search</string>
+    <string name="smartspace_preferences">Preferences</string>
+    <string name="smartspace_time_follow_system">Follow System</string>
+    <string name="smartspace_time_12_hour_format">12-Hour Format</string>
+    <string name="smartspace_time_24_hour_format">24-Hour Format</string>
+    <string name="smartspace_battery_status">Battery Status</string>
+    <string name="smartspace_battery_charging">Charging</string>
+    <string name="smartspace_battery_full">Charged</string>
+    <string name="smartspace_battery_low">Battery Low</string>
+    <string name="battery_charging_percentage_charging_time">"%1$d%% — Full in %2$s"</string>
+    <string name="smartspace_now_playing">Now Playing</string>
+    <string name="smartspace_requires_setup">Tap to Set Up</string>
+    <string name="smartspace_weather">Weather</string>
+    <string name="smartspace_widget_placeholder_date">Fri, Mar 3</string>
+    <string name="generic_smartspace_concatenated_desc">%1$s, %2$s</string>
+    <string name="smartspace_icu_date_pattern_gregorian_wday_month_day_no_year" translatable="false">EEEMMMd</string>
+    <string name="smartspace_icu_date_pattern_gregorian_time" translatable="false">HH:mm</string>
+    <string name="smartspace_icu_date_pattern_gregorian_time_12h" translatable="false">hh:mm aa</string>
+    <string name="smartspace_icu_date_pattern_gregorian_date" translatable="false"> dd MMMM</string>
+    <string name="smartspace_icu_date_pattern_persian_wday_month_day_no_year" translatable="false">l، j F</string>
+    <string name="smartspace_icu_date_pattern_persian_time" translatable="false">H:i</string>
+    <string name="smartspace_icu_date_pattern_persian_time_12h" translatable="false">g:i a</string>
+    <string name="smartspace_icu_date_pattern_persian_date" translatable="false">"j F، "</string>
+    <string name="accessibility_smartspace_page">Page %1$d of %2$d</string>
+    <string name="smartspace_widget">At a Glance</string>
+    <string name="smartspace_widget_toggle_label">Show on Home Screen</string>
+    <string name="smartspace_widget_toggle_description">At a Glance can be manually added by placing the "Lawnchair" widget.</string>
+    <string name="what_to_show">What to Show</string>
+    <string name="preview_label">Preview</string>
+    <string name="smartspace_date_and_time">Date &amp; Time</string>
+    <string name="smartspace_date">Date</string>
+    <string name="smartspace_time">Time</string>
+    <string name="smartspace_time_format">Time Format</string>
+    <string name="smartspace_calendar">Calendar</string>
+    <string name="event_provider_missing_notification_dots">To use <xliff:g example="My Provider" id="providerName">%1$s</xliff:g>, enable Notification Dots.</string>
 
 </resources>
