--- a/catapult/res/values/strings.xml
+++ b/catapult/res/values/strings.xml
@@ -66,5 +66,6 @@
     <string name="smartspace_time_format">Time Format</string>
     <string name="smartspace_calendar">Calendar</string>
     <string name="event_provider_missing_notification_dots">To use <xliff:g example="My Provider" id="providerName">%1$s</xliff:g>, enable Notification Dots.</string>
+    <string name="allow_widget_overlap">Allow overlap</string>
 
 </resources>
